Version 0.9.2
Add styles plugin
Add customizable history styles
ICQ: Fix receive messages from icq2003b
Jabber: Add disco request fro search agents
Add history size config
Add remote control plugin
Add spell checking
Jabber: Add jabber browser/disco

Version 0.9.1
ICQ: Fix login
Add GPG plugin
Fix HTTPS proxy auth
Add Hungarian translation

Version 0.9
Rewrite code, make plugin-based structure
Add MSN & Jabber protocols
Add metacontact support
ICQ: Add typing notification
ICQ: Add support users picture
ICQ: Add check invisible
Add Miranda emoticons support
ICQ: Add support AIM buddies
ICQ: Fix send to occupied and dnd mode
MSN: Upgrade protocol to V8
Add quick search in contact list
MacOS X compile
Add AIM protocol
Jabber: Add rich-text support
Jabber: Add typing notification
ICQ: File transfer and reverse direct connections support
MSN: File transfer support
ICQ: Fix protocol for bigendian
Jabber: File transfer support
Jabber: Picture in vCard support
Jabber: Send & receive contacts list
AIM: Send & receive contacts list
Add Portuguese translation

Version 0.8.2
Add Bulgarian translation
Add Hebrew translation
Add random chat
Add settings for groups
Add GKrellM2 plugin
Add French translation

Version 0.8.1
Add option for using simple/double click
Add background picture for mainwindow
Add option "disable all sounds"
Add change UIN
Add GNOME 2 docklet support
Add Polish translation
Add Dutch translation
Add change history sort order
Add synchronization with KAddressBook
Add Spanish translation
Redesign setup window
Add customize toolbars
Add Czech translation
Add copy messages from history to conversation
Fix works with accel
Fix receiving unicode messages from ICQ2Go!
Add external programms in template
Add network monitor
Fix rtf parser and generator for fix font size problem
Switch support HTTP and HTTPS proxy from call CONNECT method to using AIM-HTTP gate
Add saving split position in chat mode message window

Version 0.8